--- a/main.html
+++ b/main.html
@@ -1,16 +1,104 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Assignment 3</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1 style="text-align: center;">HTML Assignment #3</h1>
+
+    <!-- Table 1 -->
+    <table class="middle" id="table-1">
+        <tr>
+            <td id="t11">Cell 1</td>
+            <td id="t12">Cell 2</td>
+            <td id="t13">Cell 3</td>
+        </tr>
+        <tr class="center">
+            <td>Center Row, Column 1</td>
+            <td>Center Row, Column 2</td>
+            <td class="right">Center Row, Rightmost Column</td>
+        </tr>
+        <tr>
+            <td>Cell 4</td>
+            <td>Cell 5</td>
+            <td>Cell 6</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <!-- Table 2 -->
+    <table class="middle" id="table-2">
+        <tr>
+            <td id="t21" colspan="6">First Row, Single Cell (Colspan 6)</td>
+        </tr>
+        <tr>
+            <td>Cell 1</td>
+            <td>Cell 2</td>
+            <td>Cell 3</td>
+            <td>Cell 4</td>
+            <td>Cell 5</td>
+            <td>Cell 6</td>
+        </tr>
+        <tr>
+            <td>Cell 7</td>
+            <td>Cell 8</td>
+            <td>Cell 9</td>
+            <td>Cell 10</td>
+            <td>Cell 11</td>
+            <td>Cell 12</td>
+        </tr>
+        <tr>
+            <td>Cell 13</td>
+            <td>Cell 14</td>
+            <td>Cell 15</td>
+            <td>Cell 16</td>
+            <td>Cell 17</td>
+            <td>Cell 18</td>
+        </tr>
+        <tr>
+            <td>Cell 19</td>
+            <td>Cell 20</td>
+            <td>Cell 21</td>
+            <td>Cell 22</td>
+            <td>Cell 23</td>
+            <td>Cell 24</td>
+        </tr>
+        <tr>
+            <td>Cell 25</td>
+            <td>Cell 26</td>
+            <td>Cell 27</td>
+            <td>Cell 28</td>
+            <td>Cell 29</td>
+            <td>Cell 30</td>
+        </tr>
+    </table>
+
+    <br>
+
+    <!-- Table 3 -->
+    <table class="middle" id="table-3">
+        <tr class="green">
+            <td>
+				<br>
+			</td>
+        </tr>
+        <tr>
+            <td id="t-image" colspan="3">
+                <img src="https://via.placeholder.com/300" alt="Placeholder Image">
+            </td>
+        </tr>
+        <tr class="blue">
+            <td>
+				<br>
+			</td>
+        </tr>
+    </table>
 
 </body>
-
 </html>
