--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,31 +8,34 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>HTML Assignment #3</h1>
+
+    <h1 style="text-align: center;">HTML Assignment #3</h1>
 
     <!-- Table 1 -->
-    <table id="table-1" class="middle">
+    <table class="middle" id="table-1">
         <tr>
             <td id="t11">Cell 1</td>
             <td id="t12">Cell 2</td>
-            <td id="t13" class="center right">Cell 3</td>
+            <td id="t13">Cell 3</td>
+        </tr>
+        <tr class="center">
+            <td>Center Row, Column 1</td>
+            <td>Center Row, Column 2</td>
+            <td class="right">Center Row, Rightmost Column</td>
         </tr>
         <tr>
             <td>Cell 4</td>
-            <td class="center">Cell 5</td>
-            <td class="center right">Cell 6</td>
-        </tr>
-        <tr>
-            <td>Cell 7</td>
-            <td>Cell 8</td>
-            <td class="center right">Cell 9</td>
+            <td>Cell 5</td>
+            <td>Cell 6</td>
         </tr>
     </table>
 
+    <br>
+
     <!-- Table 2 -->
-    <table id="table-2" class="middle">
+    <table class="middle" id="table-2">
         <tr>
-            <td id="t21" colspan="6">Single Cell Spanning 6 Columns</td>
+            <td id="t21" colspan="6">First Row, Single Cell (Colspan 6)</td>
         </tr>
         <tr>
             <td>Cell 1</td>
@@ -75,24 +79,26 @@
         </tr>
     </table>
 
+    <br>
+
     <!-- Table 3 -->
-    <table id="table-3" class="middle">
+    <table class="middle" id="table-3">
         <tr class="green">
-            <td>Green Row</td>
-            <td>Cell 2</td>
-            <td>Cell 3</td>
+            <td>
+				<br>
+			</td>
         </tr>
         <tr>
-            <td>Cell 4</td>
-            <td id="t-image" colspan="2">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+            <td id="t-image" colspan="3">
+                <img src="https://via.placeholder.com/300" alt="Placeholder Image">
             </td>
         </tr>
         <tr class="blue">
-            <td>Blue Row</td>
-            <td>Cell 6</td>
-            <td>Cell 7</td>
+            <td>
+				<br>
+			</td>
         </tr>
     </table>
+
 </body>
 </html>
